about section add

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="link">
                 <ul>
                     <li><a href="" class="link_style">Home</a></li>
-                    <li><a href="" class="link_style">About</a></li>
+                    <li><a href="about.html" class="link_style">About</a></li>
                     <li><a href="food_menu.html" class="link_style">Food menu</a></li>
                     <li><a href="" class="link_style">Book Table</a></li>
                 </ul>
