--- a/food_menu.html
+++ b/food_menu.html
@@ -7,9 +7,22 @@
     <link rel="stylesheet" href="Styles/food_menu.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#Biryani" class="link_design">Biryani</a></li>
+                <li><a href="#chicken" class="link_design">Chicken</a></li>
+                <li><a href="#chinese" class="link_design">Chinese</a></li>
+                <li><a href="#paneer" class="link_design">Paneer</a></li>
+                <li><a href="#vegitable" class="link_design">Vegitable</a></li>
+                <li><a href="#south" class="link_design">South Indian</a></li>
+            </ul>
+        </nav>
+        <li id="order"><a href="form.html" class="login_info"> Confirm Order</a></li>
+    </header>
   <main>
     <section>
-        <h3 class="biryani">Biryani</h3>
+        <p class="biryani"><a href="" id="Biryani">Biryani</a></p>
         <div class="biryani_image">
             <div class="biryani_items"><img src="../images/biryani/Ambur-Chicken-Biryani.jpg" alt="" class="image_design">
             
@@ -33,7 +46,7 @@
         </div>
       </section>
       <section>
-        <h3 class="biryani">Chicken Delicious</h3>
+        <p class="biryani"><a href="" id="chicken">chicken</a></p>
         <div class="biryani_image">
             <div class="biryani_items"><img src="../images/chicken/Chicken-Curry.jpg" alt="" class="image_design">
             </div>
@@ -54,7 +67,7 @@
         </div>
       </section>
       <section>
-        <h3 class="biryani">Chinese</h3>
+        <p class="biryani"><a href="" id="chinese">chineses</a></p>
         <div class="biryani_image">
             <div class="biryani_items"><img src="../images/chinese/cabbage-momos-.jpg" alt="" class="image_design">
             </div>
@@ -77,7 +90,7 @@
         </div>
       </section>
       <section>
-        <h3 class="biryani">Paneer Mania</h3>
+        <p class="biryani"><a href="" id="paneer">paneer</a></p>
         <div class="biryani_image">
             <div class="biryani_items"><img src="../images/paneer/Matar-Paneer.jpg" alt="" class="image_design">
             </div>
@@ -98,7 +111,7 @@
         </div>
       </section>
       <section>
-        <h3 class="biryani">Vegitable</h3>
+        <p class="biryani"><a href="" id="vegitable">vegitable</a></p>
         <div class="biryani_image">
             <div class="biryani_items"><img src="../images/vegetable/navratan-korma_-vegetable.png" alt="" class="image_design">
             </div>
@@ -119,7 +132,7 @@
         </div>
       </section>
       <section>
-        <h3 class="biryani">South Indian</h3>
+        <p class="biryani"><a href="" id="south">south Indian</a></p>
         <div class="biryani_image">
             <div class="biryani_items"><img src="../images/south indian/Butter-Masala-Dosa.png" alt="" class="image_design">
             </div>
