--- a/food_menu.html
+++ b/food_menu.html
@@ -24,133 +24,133 @@
     <section>
         <p class="biryani"><a href="" id="Biryani">Biryani</a></p>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/biryani/Ambur-Chicken-Biryani.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/biryani/Ambur-Chicken-Biryani.jpg" alt="" class="image_design">
             
             </div>
-            <div class="biryani_items"><img src="../images/biryani/Chicken-Biryani-hyd.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/biryani/Chicken-Biryani-hyd.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/biryani/egg-biryani.jpeg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/biryani/egg-biryani.jpeg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/biryani/goan-fish-biryani.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/biryani/goan-fish-biryani.jpg" alt="" class="image_design">
             </div> 
         </div>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/biryani/hyd-Mutton-Biryani.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/biryani/hyd-Mutton-Biryani.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/biryani/kamrupi-biryani.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/biryani/kamrupi-biryani.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/biryani/kashmiri.pulao.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/biryani/kashmiri.pulao.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/biryani/memonibiryani.png" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/biryani/mughlai-biryani.jpg" alt="" class="image_design">
             </div>
         </div>
       </section>
       <section>
         <p class="biryani"><a href="" id="chicken">chicken</a></p>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/chicken/Chicken-Curry.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chicken/Chicken-Curry.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chicken/Chicken-do-Pyaza.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chicken/Chicken-do-Pyaza.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chicken/Chicken-Masala.jpeg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chicken/Chicken-Masala.jpeg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chicken/Chicken_roast.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chicken/Chicken_roast.jpg" alt="" class="image_design">
             </div>
         </div>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/chicken/Handi-chicken.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chicken/Handi-chicken.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chicken/Murgh-Musallam.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chicken/Murgh-Musallam.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chicken/Paneer-Butter-Masala.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chicken/Paneer-Butter-Masala.jpg" alt="" class="image_design">
             </div>
         </div>
       </section>
       <section>
         <p class="biryani"><a href="" id="chinese">chineses</a></p>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/chinese/cabbage-momos-.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chinese/cabbage-momos-.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chinese/ChickenManchurian.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chinese/ChickenManchurian.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chinese/Chili-Chicken.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chinese/Chili-Chicken.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chinese/chowmin.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chinese/chowmin.jpg" alt="" class="image_design">
             </div>
         </div>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/chinese/spring-rolls.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chinese/mmos.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chinese/mmos.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chinese/spring-rolls.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chinese/szechuan-chicken.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chinese/szechuan-chicken.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/chinese/veg-fried-rice.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/chinese/veg-fried-rice.jpg" alt="" class="image_design">
             </div>
         </div>
       </section>
       <section>
         <p class="biryani"><a href="" id="paneer">paneer</a></p>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/paneer/Matar-Paneer.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/paneer/Matar-Paneer.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/paneer/palak-paneer.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/paneer/palak-paneer.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/paneer/paneer-butter-masala.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/paneer/Paneer-Do-Pyaza.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/paneer/Paneer-Do-Pyaza.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/paneer/paneer-lababdar.jpg" alt="" class="image_design">
             </div>
         </div>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/paneer/Paneer-Hyderabadi.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/paneer/Paneer-Hyderabadi.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/paneer/paneer-lababdar.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/paneer/paneer-lababdar.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/paneer/shahi-paneer.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/paneer/shahi-paneer.jpg" alt="" class="image_design">
             </div>
         </div>
       </section>
       <section>
         <p class="biryani"><a href="" id="vegitable">vegitable</a></p>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/vegetable/navratan-korma_-vegetable.png" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/vegetable/navratan-korma_-vegetable.png" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/vegetable/VEG-JALFREZI.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/vegetable/VEG-JALFREZI.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/vegetable/vegetable-biryani.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/vegetable/vegetable-biryani.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/vegetable/vegetable-curry.jpeg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/vegetable/vegetable-curry.jpeg" alt="" class="image_design">
             </div>
         </div>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/vegetable/vegetable-kolhapuri.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/vegetable/vegetable-kolhapuri.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/vegetable/vegetable-masala.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/vegetable/vegetable-masala.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/vegetable/vegetable-pakora.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/vegetable/vegetable-pakora.jpg" alt="" class="image_design">
             </div>
         </div>
       </section>
       <section>
         <p class="biryani"><a href="" id="south">south Indian</a></p>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/south indian/Butter-Masala-Dosa.png" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/south indian/Butter-Masala-Dosa.png" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/south indian/idli-with-rice-flour.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/south indian/idli-with-rice-flour.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/south indian/masala-dosa.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/south indian/masala-dosa.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/south indian/mysore-bonda.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/south indian/mysore-bonda.jpg" alt="" class="image_design">
             </div>
         </div>
         <div class="biryani_image">
-            <div class="biryani_items"><img src="../images/south indian/mysore-bonda.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/south indian/onion-uttapam.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/south indian/onion-uttapam.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/south indian/plain-dosa.jpeg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/south indian/Rava-Uttapam.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/south indian/Rava-Uttapam.jpg" alt="" class="image_design">
             </div>
-            <div class="biryani_items"><img src="../images/south indian/sambhar-vada.jpg" alt="" class="image_design">
+            <div class="biryani_items"><img src="images/south indian/sambhar-vada.jpg" alt="" class="image_design">
             </div>
         </div>
       </section>
